deployment-manifest/guestbook-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
  labels:
    app.kubernetes.io/name: guestbook
    app.kubernetes.io/component: frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: guestbook
      app.kubernetes.io/component: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guestbook
        app.kubernetes.io/component: frontend
    spec:
      containers:
      - name: guestbook
        image: registry.gitlab.<ENV-ANIMAL>.<ENV-DOMAIN>/git-user-<ENV-USER-ID>/guestbook-application:1
        ports:
        - name: http-server
          containerPort: 3000
      imagePullSecrets:
      - name: regcred
